--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
 # Dependencies
-node_modules/
-.pnp
-.pnp.js
+node_modules
+server/node_modules
 
-# Testing
-coverage
-
-# Production
-build/
-dist/
-
-# Environment variables (Crucial for security)
+# Environment Variables (Secrets)
 .env
+server/.env
+
+# Build outputs
+dist
+build
+
+# System files
 .DS_Store
