--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.3",
+    "express-rate-limit": "^8.2.1",
+    "mongoose": "^9.1.4",
     "nodemailer": "^7.0.12"
   },
   "devDependencies": {
